[tool.poetry]
name = "analyze"
version = "0.1.0"
description = ""
authors = ["Aziz <minovaziz@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = ">=3.11,<4.0"
ffmpeg-python = "^0.2.0"
numpy = "^1.23.0"  # Ensure compatibility with Python 3.11
opencv-python-headless = "^4.10.0.84"
onnxruntime = "^1.14.0"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
